<resources>
    <string name="app_name">TT</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fast_quest">Fast Quest</string>
    <string name="ButtonName">GO</string>
    <string name="card_selection">Card Selection</string>
    <string name="reload">Reload</string>
    <string name="info_detail">색으로 구별 \n\n높은 티어 높은 도전\n\n카드를 선택해서 할일을 찾자</string>
    <string name="accept">확인</string>
    <string name="start">시작</string>
    <string name="act_pic">활동 사진</string>
    <string name="title">Title</string>
    <string name="detail">Detail</string>
    <string name="map">map</string>
    <string name="info">\?</string>
</resources>
